# python-app-architecture-demo

./: README.md  pyproject.toml
python_app_architecture_demo/: config.py  coordinator.py  main.py
python_app_architecture_demo/api/: __init__.py
python_app_architecture_demo/api/dependencies/: database.py  providers.py
python_app_architecture_demo/api/endpoints/: user.py
python_app_architecture_demo/entities/: user.py
python_app_architecture_demo/general/: session.py
python_app_architecture_demo/mappers/: user_mapper.py
python_app_architecture_demo/providers/: __ini__.py  mail_provider.py  user_provider.py
python_app_architecture_demo/repository/: user_repository.py
python_app_architecture_demo/repository/models/: user.py
python_app_architecture_demo/services/: abstract_service.py  report_service.py
python_app_architecture_demo/services/api_service/: __init__.py
python_app_architecture_demo/services/api_service/api/dependencies/: providers.py
python_app_architecture_demo/services/telegram_service/: __init__.py
