[tool.poetry]
name = "python-app-architecture-demo"
version = "0.1.0"
description = ""
authors = ["Mark Parker <mark@parker-programs.com>"]
readme = "README.md"
packages = [{include = "python_app_architecture_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
aiogram = "^3.4.1"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
